clusters/_shared_/policy-base/opa-policy-constraints/block-loadbalancer_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockLoadBalancer
metadata:
  name: block-loadbalancer
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
