clusters/_shared_/policy-base/opa-policy-constraints/block-nodeport_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-nodeport
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
