clusters/_shared_/policy-base/opa-policy-constraints/unique-service-selector_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueServiceSelector
metadata:
  name: unique-service-selector
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
